Fix false-positive contrast errors

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -48,8 +48,8 @@
       font-size: 0.7em;
       padding: 5px;
       margin: 5px;
-      color: black;
-      background-color: hsla(195, 52%, 79%, 0.5);
+      color: $color-primary-dark;
+      background-color: $color-primary-light;
       border-radius: 4px;
 
       &:hover {
