--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,6 +4,7 @@ $link-hover: rgb(212, 212, 212);
 
 .footer {
   width: 100%;
+  background-color: $color-gray-darker;
   background-image: linear-gradient(
     135deg,
     $color-gray-dark,
